# klippy

./: .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  GEMINI.md  LICENSE  PLAN.md  README.md  TODO.md  docker-compose.gpu.yml  docker-compose.yml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
.superpowers/brainstorm/8397-1777344850/content/: composer-unification.html  consolidation-approaches.html  design-review.html  ui-polish.html
.superpowers/brainstorm/8397-1777344850/state/: server-info
backend/: CHANGELOG.md  Dockerfile  engine.py  main.py  pyproject.toml
backend/tests/: test_api.py  test_engine.py
data/final/: prompt.md
docs/: code-review-fixes.md  spec-questions-endpoint.md  ui-ux-design-review.md
docs/plans/: 2026-04-14-chat-implementation-plan.md  2026-04-27-corpus-explorer.md  2026-04-28-frontend-design-review-spec.md  2026-04-28-frontend-refactor-plan.md
docs/specs/: 2026-04-24-mobile-responsiveness.md  2026-04-24-questions-endpoint.md  2026-04-24-sidebar-icons.md  2026-04-27-corpus-explorer-design.md
frontend/: CHANGELOG.md  Dockerfile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend-astro/: package.json
frontend-astro/src/pages/: index.astro
frontend/src/: app.css  app.html
frontend/src/lib/: ChatHero.svelte  ChatHero.test.ts  Composer.svelte  IdentityForm.svelte  chat-state.svelte.ts  chat-state.test.ts  corpus-stats.test.ts  corpus-stats.ts  filters.test.ts  filters.ts  use-autocomplete.ts
frontend/src/pages/: index.astro
frontend/src/routes/: +layout.svelte  +page.svelte  page.test.ts
frontend/tests/: home.test.ts
harvester/: .gitignore  CHANGELOG.md  Dockerfile  debug_docs.py  main.py  orchestrator.py  pyproject.toml
harvester/clickup/: client.py  parser.py
harvester/github/: client.py  parser.py
harvester/tests/: test_clickup_client.py  test_clickup_parser.py  test_github_client.py  test_github_parser.py  test_orchestrator.py
harvester/utils/: state.py
(+9 files in other folders)
